fixed gallery sizing on mobile and desktop

--- a/src/components/gallery/gallery.css
+++ b/src/components/gallery/gallery.css
@@ -6,14 +6,31 @@
   .carousel-control-next-icon,
   .carousel-control-prev-icon {
     visibility: hidden;
+    
   }
+  
+}
+.carousel .item img {
+  max-height: 768px;
+  min-width: auto;
 }
 
+@media (min-width: 40em){
+  .sal{
+    width:70%;
+    margin: auto;
+    ;
+  }
+}
 .fancy-border {
   border: 25px solid #B88846;
   border-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='75' height='75'%3E%3Cg fill='none' stroke='%23B88846' stroke-width='2'%3E%3Cpath d='M1 1h73v73H1z'/%3E%3Cpath d='M8 8h59v59H8z'/%3E%3Cpath d='M8 8h16v16H8zM51 8h16v16H51zM51 51h16v16H51zM8 51h16v16H8z'/%3E%3C/g%3E%3Cg fill='%23B88846'%3E%3Ccircle cx='16' cy='16' r='2'/%3E%3Ccircle cx='59' cy='16' r='2'/%3E%3Ccircle cx='59' cy='59' r='2'/%3E%3Ccircle cx='16' cy='59' r='2'/%3E%3C/g%3E%3C/svg%3E") 25;
 }
 
 .projector{
-  width:100%;
+  width:100%; 
+   padding:0!important;
+}
+.fred{
+  width: 100%;
 }
