--- a/src/components/midwaytitle/midwaytitle.css
+++ b/src/components/midwaytitle/midwaytitle.css
@@ -10,6 +10,6 @@
   font-size: 1.75vmax;
 }
 .zala {
-  margin-top: 5%;
-  padding-top: 15%;
+  /* margin-top: 5%; */
+  padding-top: 5%;
 }
